[iOS] Right command key has wrong value for property code https://bugs.webkit.org/show_bug.cgi?id=193876 <rdar://problem/47577308>

Reviewed by Brent Fulgham.

Source/WebCore:

We're looking for the wrong Windows virtual key code for the right command key.
Substitute VK_APPS for VK_RWIN so we can identify the right command key and return
the correct value for the code property of the DOM key event.

* platform/ios/PlatformEventFactoryIOS.mm:
(WebCore::codeForKeyEvent):

LayoutTests:

Update test result.

* fast/events/ios/keydown-keyup-special-keys-in-non-editable-element-expected.txt:

Canonical link: https://commits.webkit.org/211902@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@245162 268f45cc-cd09-0410-ab3c-d52691b4dbfc